--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "build": "rimraf ./build && tsc",
-        "start": "npm run build && node build/index.js"
+        "start": "npm run build && forever start build/index.js"
     },
     "dependencies": {
         "@types/minimist": "^1.2.2",
