--- a/src/cfg/game.cfg
+++ b/src/cfg/game.cfg
@@ -155,3 +155,5 @@ spec_replay_enable "0"
 spec_replay_autostart "0"
 sv_coaching_enabled "1"
 rcon tv_enable "1"
+sv_showimpacts 0
+sv_showimpacts_time 0
